#ifndef IBLUETOOTH
#define IBLUETOOTH

class IBluetooth
{
public:
  virtual void DataTransmitor() =0;
};

#endif